--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Webhook Notifier</title>
-  <link rel="stylesheet" href="./index.css" type="text/css" />
+  <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
   <div class="card">
@@ -16,7 +16,9 @@
     <p>
       Use this API to monitor important events and send real-time alerts via Twilio or SMTP.
     </p>
-    <div class="tag">/webhook endpoint is active</div>
+    <div class="tag" id="webhookStatus">/webhook endpoint is active</div>
   </div>
+
+  <script src="./index.js"></script>
 </body>
 </html>
